--- a/public/index.html
+++ b/public/index.html
@@ -15,3 +15,11 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+  body {
+    display: flex;
+    justify-content: center;
+  }
+
+</style>
